# genofoundation

./: .gitignore  README.md  pyproject.toml
experiments/vae/: README.md  evaluate_vae.py  run-16ch-convvae-tms.sh  run-1layer-ffnvae-tms.sh  run-32ch-convvae-tms.sh  run-5layer-ffnvae-tms.sh  run-8ch-convvae-tms.sh  run-hparam-scan-vanillavae-tms.sh  train_convvae.py  train_convvae.sh  train_convvae_latent64.2.sh  train_convvae_latent64.sh  train_ffnvae.2.sh  train_ffnvae.py  train_ffnvae.sh  train_vanillavae.py  train_vanillavae.sh
experiments/vae/configs/: convvae_tms.yaml  ffnvae_tms.yaml  vanillavae_tms.yaml
experiments/vae/deprecated/: run-16ch.2-convvae-tms.sh  run-24ch-convvae-tms.sh  run-2ch-convvae-tms.sh  run-4ch-convvae-tms.sh  run-hparam-scan-convvae-tms.sh  run-hparam-scan-ffnvae-tms.sh  run_hparam_search.sh  train_vanillavae_miniTMS.py
src/feature_profiling/: original_genomap.py
src/genofoundation/: __init__.py
src/genofoundation/feature_profiling/: __init__.py  corr.py  lattice.py  original_genomap.py  px2img.py
src/genofoundation/models/vae/: conv.py  conv_vae.py  convvae.py  ffn_vae.py  train.py  trainer.py  vanilla_vae.py
src/genofoundation/models/vae/trainer/: __init__.py  callbacks.py  (+6 more)
tests/: README.md  test_resume_behavior.py
tests/vae/: __init__.py  conftest.py  test_beta_scheduler.py  test_callbacks.py  test_checkpoint_io.py  test_checkpointing.py  test_config.py  test_conv_vae.py  test_early_stopping.py  test_fast_forward.py  test_ffn_vae.py  test_lr_schedulers.py  test_progress_tracking.py  test_trainer_core.py  test_vanilla_vae.py
